# bookstore

./: .dockerignore  .gitignore  Docker-compose.yaml  Dockerfile  README.md  db.sqlite3  env.dev  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: asgi.py  settings.py  urls.py
order/: factories.py  tests.py  urls.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py  order_serializers.py
order/tests/: test_order_viewsets.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  categories.py  product.py
product/serializers/: __init__.py  categories_serializers.py  product_serializers.py
product/tests/: test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py  test_category_viweset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
