[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Thiago Souza <thiago.souza@azos.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
black = "^24.8.0"
djangorestframework = "^3.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"      
factory-boy = "^3.2.0"  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
